--- a/vol.html
+++ b/vol.html
@@ -14,77 +14,63 @@
   <title>Ratanlal Mahanta | Computational Finance & AI Quant Research</title>
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <!-- ✅ MathJax config for formulas -->
+  <!-- MathJax -->
   <script>
-    window.MathJax = {
-      tex: {
-        inlineMath: [['$', '$'], ['\\(', '\\)']],
-        displayMath: [['\\[', '\\]']]
-      }
-    };
+    window.MathJax = { tex: { inlineMath: [['$', '$'], ['\\(', '\\)']], displayMath: [['$$','$$'], ['\\[','\\]']] } };
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
-
+  <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      color: #222;
-    }
-    header {
-      background: #1a1a1a;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #222; }
+    header { background: #1a1a1a; color: white; display: flex; align-items: center; justify-content: space-between; padding: 10px 20px; }
     header h1 { margin: 0; font-size: 1.8em; }
     header p { margin: 0; font-size: 0.9em; color: #ccc; }
-    #menu-toggle {
-      background: none; border: none; color: white;
-      font-size: 1.5em; cursor: pointer;
-    }
-    aside.sidebar {
-      position: fixed; top: 0; left: -250px;
-      width: 250px; height: 100%; background: #333;
-      padding-top: 60px; overflow-y: auto;
-      transition: left 0.3s ease-in-out; z-index: 1000;
-    }
-    .sidebar.active { left: 0; }
-    .sidebar ul { list-style: none; padding: 0; margin: 0; }
-    .sidebar ul li { padding: 15px 20px; }
-    .sidebar ul li a {
-      color: white; text-decoration: none;
-      display: block; font-weight: bold; cursor: pointer;
-    }
-    .sidebar ul li a:hover, .sidebar ul li a.active {
-      background: #444; color: #2ecc71;
-    }
-    .sidebar i { margin-right: 8px; }
-    #close-btn {
-      position: absolute; top: 10px; right: 15px;
-      background: none; border: none; color: white;
-      font-size: 1.2em; cursor: pointer;
-    }
-    main { padding: 20px; max-width: 1000px; margin: auto; }
+    #menu-toggle { background: none; border: none; color: white; font-size: 1.5em; cursor: pointer; }
+    main { padding: 20px; max-width: 1000px; margin: auto; background: white; }
     h2, h3 { color: #1a1a1a; }
-    footer {
-      background: #1a1a1a; color: #ccc;
-      text-align: center; padding: 20px;
-    }
+    .formula { background:#fff; border:1px dashed #e5e7eb; border-radius:12px; padding:12px 14px; margin:12px 0; }
+    footer { background: #1a1a1a; color: #ccc; text-align: center; padding: 20px; }
     footer a { color: #ccc; margin: 0 10px; text-decoration: none; }
     footer a:hover { color: #2ecc71; }
     .social-media i { margin: 0 5px; font-size: 1.2em; }
-    @media (max-width: 768px) {
-      header h1 { font-size: 1.4em; }
-      #menu-toggle { font-size: 1.3em; }
-      .sidebar ul li { padding: 12px 16px; }
-      main { padding: 15px; }
+    .sr-only { position: absolute; left: -9999px; width: 1px; height: 1px; overflow: hidden; }
+
+    /* Sidebar Navigation */
+    aside.sidebar {
+      position: fixed;
+      top: 0;
+      left: -260px;
+      width: 260px;
+      height: 100%;
+      background: #111;
+      color: white;
+      padding-top: 60px;
+      transition: left 0.3s ease;
+      z-index: 1000;
     }
+    aside.sidebar.active { left: 0; }
+    aside.sidebar ul { list-style: none; padding: 0; margin: 0; }
+    aside.sidebar ul li { border-bottom: 1px solid #333; }
+    aside.sidebar ul li a {
+      display: block;
+      padding: 12px 20px;
+      color: white;
+      text-decoration: none;
+    }
+    aside.sidebar ul li a:hover { background: #2ecc71; }
+
+    #overlay {
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      z-index: 900;
+    }
+    #overlay.active { display: block; }
+
+    /* Submenu */
+    .submenu { display: none; background: #1c1c1c; }
+    .submenu li a { padding-left: 40px; font-size: 0.9em; }
+    .has-submenu { cursor: pointer; }
   </style>
 </head>
 
@@ -97,23 +83,15 @@
     </div>
   </header>
 
-  <!-- ✅ Sidebar Menu -->
+  <!-- Sidebar Menu -->
   <aside id="sidebar" class="sidebar">
-    <button id="close-btn"><i class="fas fa-times"></i></button>
+    <button id="close-btn" style="margin-left:200px; background:none; border:none; color:white; font-size:1.5em;"><i class="fas fa-times"></i></button>
     <ul>
-      
-      <li><a href="#gbm"><i class="fas fa-chart-line"></i> GBM Dynamics</a></li>
-      <li><a href="#pd"><i class="fas fa-exclamation-triangle"></i> Probability of Default</a></li>
-      <li><a href="#spread"><i class="fas fa-dollar-sign"></i> CDS Spread</a></li>
-      <li><a href="#mc"><i class="fas fa-random"></i> Monte Carlo</a></li>
-      <li><a href="#summary"><i class="fas fa-list"></i> Summary</a></li>
-      <li><a href="#reference"><i class="fas fa-book"></i> Reference</a></li>
-    </ul>
-     <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
 
       <li>
-        <a class="has-submenu" id="RDToggle"><i class="fas fa-flask"></i> R&D <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="rdSubmenu">
+        <a class="has-submenu"><i class="fas fa-flask"></i> R&D <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu">
           <li><a href="about.html"><i class="fas fa-user"></i> About</a></li>
           <li><a href="projects.html"><i class="fas fa-code"></i> Projects</a></li>
           <li><a href="publications.html"><i class="fas fa-book"></i> Publications</a></li>
@@ -122,8 +100,8 @@
       </li>
 
       <li>
-        <a class="has-submenu" id="workToggle"><i class="fas fa-briefcase"></i> Work Experience <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="workExpSubmenu">
+        <a class="has-submenu"><i class="fas fa-briefcase"></i> Work Experience <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu">
           <li><a href="Work.html"><i class="fas fa-stream"></i> Timeline</a></li>
           <li><a href="rsrl.html"><i class="fas fa-industry"></i> RsRL</a></li>
           <li><a href="cts.html"><i class="fas fa-building"></i> Cognizant</a></li>
@@ -134,8 +112,8 @@
       </li>
 
       <li>
-        <a class="has-submenu" id="quantToggle"><i class="fas fa-chart-pie"></i> Quant Research <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="quantSubmenu">
+        <a class="has-submenu"><i class="fas fa-chart-pie"></i> Quant Research <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu">
           <li><a href="FX.html"><i class="fas fa-dollar-sign"></i> FX & IR</a></li>
           <li><a href="Com.html"><i class="fas fa-oil-can"></i> Commodity</a></li>
           <li><a href="Eq.html"><i class="fas fa-chart-bar"></i> Equity</a></li>
@@ -145,19 +123,22 @@
       </li>
 
       <li>
-        <a class="has-submenu" id="ReferenceToggle"><i class="fas fa-book-open"></i> Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="ReferenceSubmenu">
+        <a class="has-submenu"><i class="fas fa-book-open"></i> Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu">
           <li><a href="blog.html"><i class="fas fa-pen"></i> Blog</a></li>
-          <li><a href="blog.html"><i class="fas fa-users"></i> Conference</a></li>
-          <li><a href="blog.html"><i class="fas fa-chalkboard-teacher"></i> Lecture Series</a></li>
-          <li><a href="blog.html"><i class="fas fa-book-reader"></i> Reading List</a></li>
-          <li><a href="blog.html"><i class="fas fa-network-wired"></i> System Design</a></li>
+          <li><a href="conference.html"><i class="fas fa-users"></i> Conference</a></li>
+          <li><a href="lectures.html"><i class="fas fa-chalkboard-teacher"></i> Lecture Series</a></li>
+          <li><a href="reading.html"><i class="fas fa-book-reader"></i> Reading List</a></li>
+          <li><a href="systems.html"><i class="fas fa-network-wired"></i> System Design</a></li>
         </ul>
       </li>
-
+    </ul>
   </aside>
+  <div id="overlay"></div>
 
-  <!-- ✅ Main content -->
+
+ 
+   <!-- ✅ Main content -->
   <main>
     <h1>CDS Pricing with the Merton Model</h1>
     <p>Monte Carlo simulation for CDS spread distribution and stress testing under changing risk factors.</p>
@@ -235,7 +216,7 @@
  <img src="assets/images/cds3.png" alt="Heston surface example" />
 
     </section>
-  
+
 
     <section id="summary">
       <h2>Summary</h2>
@@ -248,30 +229,59 @@
 
     <section id="reference">
       <h2>Reference</h2>
-      <p>Model defaults via Merton; 
+      <p>Model defaults via Merton;
         <a href="https://media.licdn.com/dms/document/media/v2/D4D2DAQEvUmTxqk-R4w/profile-treasury-document-pdf-analyzed/B4DZXWUkKyG8Ag-/0/1743057472138?e=1756339200&v=beta&t=hxxKoAldryOCOMC7gqJdbhqV2l3Aw2ijwPGfmQ-7poE" target="_blank">CDS Pricing</a>.
       </p>
     </section>
   </main>
+ 
+   
 
-  <footer>
+  <footer id="contact">
     <p>&copy; 2025 Ratanlal Mahanta | All Rights Reserved</p>
+    <p>Contact:
+      <a href="mailto:ratanlalmahanta@gmail.com" title="Email"><i class="fas fa-envelope"></i><span class="sr-only">Email</span></a>
+    </p>
+    <div class="social-media">
+      <a href="https://www.linkedin.com/in/ratanlalmahanta/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/ratanlalmahanta/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://github.com/ratanlalmahanta/" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://scholar.google.com/citations?user=SpE58EQAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+      <a href="https://gemini.google.com/share/a59f97ec4a99" target="_blank" title="Google Gemini"><i class="fas fa-atom"></i></a>
+      <a href="https://x.com/i/grok/share/lGBpiRp0JUbOaTs2s3fLUtjHW" target="_blank" title="View on Grok via X"><i class="fas fa-brain"></i></a>
+    </div>
   </footer>
 
-  <!-- ✅ JS Menu Toggle -->
   <script>
+    const menuToggle = document.getElementById("menu-toggle");
     const sidebar = document.getElementById("sidebar");
-    const toggleBtn = document.getElementById("menu-toggle");
+    const overlay = document.getElementById("overlay");
     const closeBtn = document.getElementById("close-btn");
+    const submenus = document.querySelectorAll(".has-submenu");
 
-    toggleBtn.addEventListener("click", () => {
+    menuToggle.addEventListener("click", () => {
       sidebar.classList.add("active");
-      toggleBtn.setAttribute("aria-expanded", "true");
+      overlay.classList.add("active");
+      menuToggle.setAttribute("aria-expanded", "true");
     });
 
     closeBtn.addEventListener("click", () => {
       sidebar.classList.remove("active");
-      toggleBtn.setAttribute("aria-expanded", "false");
+      overlay.classList.remove("active");
+      menuToggle.setAttribute("aria-expanded", "false");
+    });
+
+    overlay.addEventListener("click", () => {
+      sidebar.classList.remove("active");
+      overlay.classList.remove("active");
+      menuToggle.setAttribute("aria-expanded", "false");
+    });
+
+    submenus.forEach(menu => {
+      menu.addEventListener("click", () => {
+        const submenu = menu.nextElementSibling;
+        submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+      });
     });
   </script>
 </body>
