--- a/vol.html
+++ b/vol.html
@@ -210,10 +210,22 @@
           \right]
         \]
       </div>
-    <img src="assets/images/cds1.png" alt="Heston surface example" />
- <img src="assets/images/cds2.png" alt="Heston surface example" />
 
- <img src="assets/images/cds3.png" alt="Heston surface example" />
+</div>
+   <img src="assets/images/cds1.png" alt="CDS Spread Plot" style="width:800px; height:auto; display:block; margin:auto;" />
+
+   
+</div>
+</div>
+   <img src="assets/images/cds2.png" alt="CDS Spread Plot" style="width:800px; height:auto; display:block; margin:auto;" />
+
+   
+</div>
+</div>
+   <img src="assets/images/cds3.png" alt="CDS Spread Plot" style="width:800px; height:auto; display:block; margin:auto;" />
+
+   
+</div>
 
     </section>
 
